# nanocortex

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  examples  pyproject.toml
.orchids/: orchids.json
docs/: work.txt
scripts/: demo.py  generate_sample_pdf.py
src/nanocortex/: __init__.py  config.py
src/nanocortex/api/: orchestrator.py  server.py
src/nanocortex/audit/: __init__.py  logger.py
src/nanocortex/knowledge/: __init__.py  retriever.py
src/nanocortex/learning/: __init__.py  feedback.py
src/nanocortex/models/: __init__.py  domain.py
src/nanocortex/perception/: __init__.py  ingestion.py
src/nanocortex/reasoning/: __init__.py  agent.py  policy.py
tests/: conftest.py  test_integration.py  test_knowledge.py  test_learning.py  test_perception.py  test_reasoning.py
